dialect/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    END
    EXIT

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement statement_list
Rule 2     statement_list -> empty
Rule 3     empty -> <empty>
Rule 4     statement -> IMPORT STRING SEMICOLON
Rule 5     statement -> assignment SEMICOLON
Rule 6     statement -> conditional
Rule 7     statement -> expr SEMICOLON
Rule 8     statement -> macro_def
Rule 9     statement -> macro_call
Rule 10    assignment -> l_value EQUAL r_value
Rule 11    statement -> loop
Rule 12    loop -> WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
Rule 13    statement -> fun_def
Rule 14    fun_def -> FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
Rule 15    statement -> RETURN expr SEMICOLON
Rule 16    id_list -> ID
Rule 17    id_list -> ID COMMA id_list
Rule 18    id_list -> empty
Rule 19    conditional -> IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
Rule 20    conditional_elif -> ELIF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif
Rule 21    conditional_elif -> empty
Rule 22    conditional_else -> ELSE LBRACE statement_list RBRACE
Rule 23    conditional_else -> empty
Rule 24    r_value -> expr
Rule 25    l_value -> ID
Rule 26    l_value -> ID fields
Rule 27    l_value -> PLACEHOLDER
Rule 28    l_value -> PLACEHOLDER fields
Rule 29    fields -> LBRACKET expr RBRACKET
Rule 30    fields -> LBRACKET expr RBRACKET fields
Rule 31    expr -> alg_op
Rule 32    expr -> STRING
Rule 33    expr -> NUMBER
Rule 34    expr -> BOOL
Rule 35    expr -> NULL
Rule 36    expr -> func_call
Rule 37    expr -> ID
Rule 38    expr -> LPAREN expr RPAREN
Rule 39    expr -> anonymous_fun
Rule 40    func_call -> ID LPAREN arg_list RPAREN
Rule 41    arg_list -> empty
Rule 42    arg_list -> expr
Rule 43    arg_list -> expr COMMA arg_list
Rule 44    alg_op -> expr PLUS expr
Rule 45    alg_op -> expr MINUS expr
Rule 46    alg_op -> expr MULTIPLY expr
Rule 47    alg_op -> expr DIVIDE expr
Rule 48    expr -> LBRACKET arg_list RBRACKET
Rule 49    expr -> LBRACE record_list RBRACE
Rule 50    expr -> LPAREN statement_list RPAREN
Rule 51    record_list -> ID COLON expr
Rule 52    record_list -> ID COLON expr COMMA record_list
Rule 53    record_list -> empty
Rule 54    expr -> expr LBRACKET expr RBRACKET
Rule 55    expr -> comp_op
Rule 56    expr -> PLACEHOLDER
Rule 57    comp_op -> expr EQUAL EQUAL expr
Rule 58    comp_op -> expr BANG EQUAL expr
Rule 59    comp_op -> expr GT expr
Rule 60    comp_op -> expr GT EQUAL expr
Rule 61    comp_op -> expr LT expr
Rule 62    comp_op -> expr LT EQUAL expr
Rule 63    expr -> log_op
Rule 64    log_op -> expr AND expr
Rule 65    log_op -> expr OR expr
Rule 66    log_op -> NOT expr
Rule 67    macro_def -> MAC macro_def_arg_list LBRACE statement_list RBRACE
Rule 68    macro_def_arg_list -> ATOM macro_def_arg_list_rec
Rule 69    macro_def_arg_list_rec -> PLACEHOLDER macro_def_arg_list_rec
Rule 70    macro_def_arg_list_rec -> ATOM macro_def_arg_list_rec
Rule 71    macro_def_arg_list_rec -> empty
Rule 72    macro_call -> ATOM macro_arg_list SEMICOLON
Rule 73    macro_arg_list -> ATOM macro_arg_list
Rule 74    macro_arg_list -> expr macro_arg_list
Rule 75    macro_arg_list -> empty
Rule 76    anonymous_fun -> LPAREN id_list RPAREN LBRACE statement_list RBRACE

Terminals, with rules where they appear

AND                  : 64
ATOM                 : 68 70 72 73
BANG                 : 58
BOOL                 : 34
COLON                : 51 52
COMMA                : 17 43 52
DIVIDE               : 47
ELIF                 : 20
ELSE                 : 22
END                  : 
EQUAL                : 10 57 57 58 60 62
EXIT                 : 
FUN                  : 14
GT                   : 59 60
ID                   : 14 16 17 25 26 37 40 51 52
IF                   : 19
IMPORT               : 4
LBRACE               : 12 14 19 20 22 49 67 76
LBRACKET             : 29 30 48 54
LPAREN               : 12 14 19 20 38 40 50 76
LT                   : 61 62
MAC                  : 67
MINUS                : 45
MULTIPLY             : 46
NOT                  : 66
NULL                 : 35
NUMBER               : 33
OR                   : 65
PLACEHOLDER          : 27 28 56 69
PLUS                 : 44
RBRACE               : 12 14 19 20 22 49 67 76
RBRACKET             : 29 30 48 54
RETURN               : 15
RPAREN               : 12 14 19 20 38 40 50 76
SEMICOLON            : 4 5 7 15 72
STRING               : 4 32
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

alg_op               : 31
anonymous_fun        : 39
arg_list             : 40 43 48
assignment           : 5
comp_op              : 55
conditional          : 6
conditional_elif     : 19 20
conditional_else     : 19
empty                : 2 18 21 23 41 53 71 75
expr                 : 7 12 15 19 20 24 29 30 38 42 43 44 44 45 45 46 46 47 47 51 52 54 54 57 57 58 58 59 59 60 60 61 61 62 62 64 64 65 65 66 74
fields               : 26 28 30
fun_def              : 13
func_call            : 36
id_list              : 14 17 76
l_value              : 10
log_op               : 63
loop                 : 11
macro_arg_list       : 72 73 74
macro_call           : 9
macro_def            : 8
macro_def_arg_list   : 67
macro_def_arg_list_rec : 68 69 70
r_value              : 10
record_list          : 49 52
statement            : 1
statement_list       : 1 12 14 19 20 22 50 67 76 0

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement statement_list
    (2) statement_list -> . empty
    (4) statement -> . IMPORT STRING SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . expr SEMICOLON
    (8) statement -> . macro_def
    (9) statement -> . macro_call
    (11) statement -> . loop
    (13) statement -> . fun_def
    (15) statement -> . RETURN expr SEMICOLON
    (3) empty -> .
    (10) assignment -> . l_value EQUAL r_value
    (19) conditional -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (39) expr -> . anonymous_fun
    (48) expr -> . LBRACKET arg_list RBRACKET
    (49) expr -> . LBRACE record_list RBRACE
    (50) expr -> . LPAREN statement_list RPAREN
    (54) expr -> . expr LBRACKET expr RBRACKET
    (55) expr -> . comp_op
    (56) expr -> . PLACEHOLDER
    (63) expr -> . log_op
    (67) macro_def -> . MAC macro_def_arg_list LBRACE statement_list RBRACE
    (72) macro_call -> . ATOM macro_arg_list SEMICOLON
    (12) loop -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (14) fun_def -> . FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (25) l_value -> . ID
    (26) l_value -> . ID fields
    (27) l_value -> . PLACEHOLDER
    (28) l_value -> . PLACEHOLDER fields
    (44) alg_op -> . expr PLUS expr
    (45) alg_op -> . expr MINUS expr
    (46) alg_op -> . expr MULTIPLY expr
    (47) alg_op -> . expr DIVIDE expr
    (40) func_call -> . ID LPAREN arg_list RPAREN
    (76) anonymous_fun -> . LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (57) comp_op -> . expr EQUAL EQUAL expr
    (58) comp_op -> . expr BANG EQUAL expr
    (59) comp_op -> . expr GT expr
    (60) comp_op -> . expr GT EQUAL expr
    (61) comp_op -> . expr LT expr
    (62) comp_op -> . expr LT EQUAL expr
    (64) log_op -> . expr AND expr
    (65) log_op -> . expr OR expr
    (66) log_op -> . NOT expr

    IMPORT          shift and go to state 4
    RETURN          shift and go to state 13
    $end            reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 23
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 25
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 27
    MAC             shift and go to state 29
    ATOM            shift and go to state 30
    WHILE           shift and go to state 31
    FUN             shift and go to state 32
    NOT             shift and go to state 33

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    expr                           shift and go to state 8
    macro_def                      shift and go to state 9
    macro_call                     shift and go to state 10
    loop                           shift and go to state 11
    fun_def                        shift and go to state 12
    l_value                        shift and go to state 14
    alg_op                         shift and go to state 18
    func_call                      shift and go to state 22
    anonymous_fun                  shift and go to state 24
    comp_op                        shift and go to state 26
    log_op                         shift and go to state 28

state 1

    (0) S' -> statement_list .



state 2

    (1) statement_list -> statement . statement_list
    (1) statement_list -> . statement statement_list
    (2) statement_list -> . empty
    (4) statement -> . IMPORT STRING SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . expr SEMICOLON
    (8) statement -> . macro_def
    (9) statement -> . macro_call
    (11) statement -> . loop
    (13) statement -> . fun_def
    (15) statement -> . RETURN expr SEMICOLON
    (3) empty -> .
    (10) assignment -> . l_value EQUAL r_value
    (19) conditional -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (39) expr -> . anonymous_fun
    (48) expr -> . LBRACKET arg_list RBRACKET
    (49) expr -> . LBRACE record_list RBRACE
    (50) expr -> . LPAREN statement_list RPAREN
    (54) expr -> . expr LBRACKET expr RBRACKET
    (55) expr -> . comp_op
    (56) expr -> . PLACEHOLDER
    (63) expr -> . log_op
    (67) macro_def -> . MAC macro_def_arg_list LBRACE statement_list RBRACE
    (72) macro_call -> . ATOM macro_arg_list SEMICOLON
    (12) loop -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (14) fun_def -> . FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (25) l_value -> . ID
    (26) l_value -> . ID fields
    (27) l_value -> . PLACEHOLDER
    (28) l_value -> . PLACEHOLDER fields
    (44) alg_op -> . expr PLUS expr
    (45) alg_op -> . expr MINUS expr
    (46) alg_op -> . expr MULTIPLY expr
    (47) alg_op -> . expr DIVIDE expr
    (40) func_call -> . ID LPAREN arg_list RPAREN
    (76) anonymous_fun -> . LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (57) comp_op -> . expr EQUAL EQUAL expr
    (58) comp_op -> . expr BANG EQUAL expr
    (59) comp_op -> . expr GT expr
    (60) comp_op -> . expr GT EQUAL expr
    (61) comp_op -> . expr LT expr
    (62) comp_op -> . expr LT EQUAL expr
    (64) log_op -> . expr AND expr
    (65) log_op -> . expr OR expr
    (66) log_op -> . NOT expr

    IMPORT          shift and go to state 4
    RETURN          shift and go to state 13
    $end            reduce using rule 3 (empty -> .)
    RPAREN          reduce using rule 3 (empty -> .)
    RBRACE          reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 23
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 25
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 27
    MAC             shift and go to state 29
    ATOM            shift and go to state 30
    WHILE           shift and go to state 31
    FUN             shift and go to state 32
    NOT             shift and go to state 33

    statement                      shift and go to state 2
    statement_list                 shift and go to state 34
    empty                          shift and go to state 3
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    expr                           shift and go to state 8
    macro_def                      shift and go to state 9
    macro_call                     shift and go to state 10
    loop                           shift and go to state 11
    fun_def                        shift and go to state 12
    l_value                        shift and go to state 14
    alg_op                         shift and go to state 18
    func_call                      shift and go to state 22
    anonymous_fun                  shift and go to state 24
    comp_op                        shift and go to state 26
    log_op                         shift and go to state 28

state 3

    (2) statement_list -> empty .

    $end            reduce using rule 2 (statement_list -> empty .)
    RPAREN          reduce using rule 2 (statement_list -> empty .)
    RBRACE          reduce using rule 2 (statement_list -> empty .)


state 4

    (4) statement -> IMPORT . STRING SEMICOLON

    STRING          shift and go to state 35


state 5

    (32) expr -> STRING .

    SEMICOLON       reduce using rule 32 (expr -> STRING .)
    LBRACKET        reduce using rule 32 (expr -> STRING .)
    PLUS            reduce using rule 32 (expr -> STRING .)
    MINUS           reduce using rule 32 (expr -> STRING .)
    MULTIPLY        reduce using rule 32 (expr -> STRING .)
    DIVIDE          reduce using rule 32 (expr -> STRING .)
    EQUAL           reduce using rule 32 (expr -> STRING .)
    BANG            reduce using rule 32 (expr -> STRING .)
    GT              reduce using rule 32 (expr -> STRING .)
    LT              reduce using rule 32 (expr -> STRING .)
    AND             reduce using rule 32 (expr -> STRING .)
    OR              reduce using rule 32 (expr -> STRING .)
    RPAREN          reduce using rule 32 (expr -> STRING .)
    COMMA           reduce using rule 32 (expr -> STRING .)
    RBRACKET        reduce using rule 32 (expr -> STRING .)
    ATOM            reduce using rule 32 (expr -> STRING .)
    STRING          reduce using rule 32 (expr -> STRING .)
    NUMBER          reduce using rule 32 (expr -> STRING .)
    BOOL            reduce using rule 32 (expr -> STRING .)
    NULL            reduce using rule 32 (expr -> STRING .)
    ID              reduce using rule 32 (expr -> STRING .)
    LPAREN          reduce using rule 32 (expr -> STRING .)
    LBRACE          reduce using rule 32 (expr -> STRING .)
    PLACEHOLDER     reduce using rule 32 (expr -> STRING .)
    NOT             reduce using rule 32 (expr -> STRING .)
    RBRACE          reduce using rule 32 (expr -> STRING .)


state 6

    (5) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 36


state 7

    (6) statement -> conditional .

    IMPORT          reduce using rule 6 (statement -> conditional .)
    RETURN          reduce using rule 6 (statement -> conditional .)
    IF              reduce using rule 6 (statement -> conditional .)
    STRING          reduce using rule 6 (statement -> conditional .)
    NUMBER          reduce using rule 6 (statement -> conditional .)
    BOOL            reduce using rule 6 (statement -> conditional .)
    NULL            reduce using rule 6 (statement -> conditional .)
    ID              reduce using rule 6 (statement -> conditional .)
    LPAREN          reduce using rule 6 (statement -> conditional .)
    LBRACKET        reduce using rule 6 (statement -> conditional .)
    LBRACE          reduce using rule 6 (statement -> conditional .)
    PLACEHOLDER     reduce using rule 6 (statement -> conditional .)
    MAC             reduce using rule 6 (statement -> conditional .)
    ATOM            reduce using rule 6 (statement -> conditional .)
    WHILE           reduce using rule 6 (statement -> conditional .)
    FUN             reduce using rule 6 (statement -> conditional .)
    NOT             reduce using rule 6 (statement -> conditional .)
    $end            reduce using rule 6 (statement -> conditional .)
    RPAREN          reduce using rule 6 (statement -> conditional .)
    RBRACE          reduce using rule 6 (statement -> conditional .)


state 8

    (7) statement -> expr . SEMICOLON
    (54) expr -> expr . LBRACKET expr RBRACKET
    (44) alg_op -> expr . PLUS expr
    (45) alg_op -> expr . MINUS expr
    (46) alg_op -> expr . MULTIPLY expr
    (47) alg_op -> expr . DIVIDE expr
    (57) comp_op -> expr . EQUAL EQUAL expr
    (58) comp_op -> expr . BANG EQUAL expr
    (59) comp_op -> expr . GT expr
    (60) comp_op -> expr . GT EQUAL expr
    (61) comp_op -> expr . LT expr
    (62) comp_op -> expr . LT EQUAL expr
    (64) log_op -> expr . AND expr
    (65) log_op -> expr . OR expr

    SEMICOLON       shift and go to state 37
    LBRACKET        shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    MULTIPLY        shift and go to state 41
    DIVIDE          shift and go to state 42
    EQUAL           shift and go to state 43
    BANG            shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46
    AND             shift and go to state 47
    OR              shift and go to state 48


state 9

    (8) statement -> macro_def .

    IMPORT          reduce using rule 8 (statement -> macro_def .)
    RETURN          reduce using rule 8 (statement -> macro_def .)
    IF              reduce using rule 8 (statement -> macro_def .)
    STRING          reduce using rule 8 (statement -> macro_def .)
    NUMBER          reduce using rule 8 (statement -> macro_def .)
    BOOL            reduce using rule 8 (statement -> macro_def .)
    NULL            reduce using rule 8 (statement -> macro_def .)
    ID              reduce using rule 8 (statement -> macro_def .)
    LPAREN          reduce using rule 8 (statement -> macro_def .)
    LBRACKET        reduce using rule 8 (statement -> macro_def .)
    LBRACE          reduce using rule 8 (statement -> macro_def .)
    PLACEHOLDER     reduce using rule 8 (statement -> macro_def .)
    MAC             reduce using rule 8 (statement -> macro_def .)
    ATOM            reduce using rule 8 (statement -> macro_def .)
    WHILE           reduce using rule 8 (statement -> macro_def .)
    FUN             reduce using rule 8 (statement -> macro_def .)
    NOT             reduce using rule 8 (statement -> macro_def .)
    $end            reduce using rule 8 (statement -> macro_def .)
    RPAREN          reduce using rule 8 (statement -> macro_def .)
    RBRACE          reduce using rule 8 (statement -> macro_def .)


state 10

    (9) statement -> macro_call .

    IMPORT          reduce using rule 9 (statement -> macro_call .)
    RETURN          reduce using rule 9 (statement -> macro_call .)
    IF              reduce using rule 9 (statement -> macro_call .)
    STRING          reduce using rule 9 (statement -> macro_call .)
    NUMBER          reduce using rule 9 (statement -> macro_call .)
    BOOL            reduce using rule 9 (statement -> macro_call .)
    NULL            reduce using rule 9 (statement -> macro_call .)
    ID              reduce using rule 9 (statement -> macro_call .)
    LPAREN          reduce using rule 9 (statement -> macro_call .)
    LBRACKET        reduce using rule 9 (statement -> macro_call .)
    LBRACE          reduce using rule 9 (statement -> macro_call .)
    PLACEHOLDER     reduce using rule 9 (statement -> macro_call .)
    MAC             reduce using rule 9 (statement -> macro_call .)
    ATOM            reduce using rule 9 (statement -> macro_call .)
    WHILE           reduce using rule 9 (statement -> macro_call .)
    FUN             reduce using rule 9 (statement -> macro_call .)
    NOT             reduce using rule 9 (statement -> macro_call .)
    $end            reduce using rule 9 (statement -> macro_call .)
    RPAREN          reduce using rule 9 (statement -> macro_call .)
    RBRACE          reduce using rule 9 (statement -> macro_call .)


state 11

    (11) statement -> loop .

    IMPORT          reduce using rule 11 (statement -> loop .)
    RETURN          reduce using rule 11 (statement -> loop .)
    IF              reduce using rule 11 (statement -> loop .)
    STRING          reduce using rule 11 (statement -> loop .)
    NUMBER          reduce using rule 11 (statement -> loop .)
    BOOL            reduce using rule 11 (statement -> loop .)
    NULL            reduce using rule 11 (statement -> loop .)
    ID              reduce using rule 11 (statement -> loop .)
    LPAREN          reduce using rule 11 (statement -> loop .)
    LBRACKET        reduce using rule 11 (statement -> loop .)
    LBRACE          reduce using rule 11 (statement -> loop .)
    PLACEHOLDER     reduce using rule 11 (statement -> loop .)
    MAC             reduce using rule 11 (statement -> loop .)
    ATOM            reduce using rule 11 (statement -> loop .)
    WHILE           reduce using rule 11 (statement -> loop .)
    FUN             reduce using rule 11 (statement -> loop .)
    NOT             reduce using rule 11 (statement -> loop .)
    $end            reduce using rule 11 (statement -> loop .)
    RPAREN          reduce using rule 11 (statement -> loop .)
    RBRACE          reduce using rule 11 (statement -> loop .)


state 12

    (13) statement -> fun_def .

    IMPORT          reduce using rule 13 (statement -> fun_def .)
    RETURN          reduce using rule 13 (statement -> fun_def .)
    IF              reduce using rule 13 (statement -> fun_def .)
    STRING          reduce using rule 13 (statement -> fun_def .)
    NUMBER          reduce using rule 13 (statement -> fun_def .)
    BOOL            reduce using rule 13 (statement -> fun_def .)
    NULL            reduce using rule 13 (statement -> fun_def .)
    ID              reduce using rule 13 (statement -> fun_def .)
    LPAREN          reduce using rule 13 (statement -> fun_def .)
    LBRACKET        reduce using rule 13 (statement -> fun_def .)
    LBRACE          reduce using rule 13 (statement -> fun_def .)
    PLACEHOLDER     reduce using rule 13 (statement -> fun_def .)
    MAC             reduce using rule 13 (statement -> fun_def .)
    ATOM            reduce using rule 13 (statement -> fun_def .)
    WHILE           reduce using rule 13 (statement -> fun_def .)
    FUN             reduce using rule 13 (statement -> fun_def .)
    NOT             reduce using rule 13 (statement -> fun_def .)
    $end            reduce using rule 13 (statement -> fun_def .)
    RPAREN          reduce using rule 13 (statement -> fun_def .)
    RBRACE          reduce using rule 13 (statement -> fun_def .)


state 13

    (15) statement -> RETURN . expr SEMICOLON
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (39) expr -> . anonymous_fun
    (48) expr -> . LBRACKET arg_list RBRACKET
    (49) expr -> . LBRACE record_list RBRACE
    (50) expr -> . LPAREN statement_list RPAREN
    (54) expr -> . expr LBRACKET expr RBRACKET
    (55) expr -> . comp_op
    (56) expr -> . PLACEHOLDER
    (63) expr -> . log_op
    (44) alg_op -> . expr PLUS expr
    (45) alg_op -> . expr MINUS expr
    (46) alg_op -> . expr MULTIPLY expr
    (47) alg_op -> . expr DIVIDE expr
    (40) func_call -> . ID LPAREN arg_list RPAREN
    (76) anonymous_fun -> . LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (57) comp_op -> . expr EQUAL EQUAL expr
    (58) comp_op -> . expr BANG EQUAL expr
    (59) comp_op -> . expr GT expr
    (60) comp_op -> . expr GT EQUAL expr
    (61) comp_op -> . expr LT expr
    (62) comp_op -> . expr LT EQUAL expr
    (64) log_op -> . expr AND expr
    (65) log_op -> . expr OR expr
    (66) log_op -> . NOT expr

    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 50
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 25
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 51
    NOT             shift and go to state 33

    expr                           shift and go to state 49
    alg_op                         shift and go to state 18
    func_call                      shift and go to state 22
    anonymous_fun                  shift and go to state 24
    comp_op                        shift and go to state 26
    log_op                         shift and go to state 28

state 14

    (10) assignment -> l_value . EQUAL r_value

    EQUAL           shift and go to state 52


state 15

    (19) conditional -> IF . LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else

    LPAREN          shift and go to state 53


state 16

    (38) expr -> LPAREN . expr RPAREN
    (50) expr -> LPAREN . statement_list RPAREN
    (76) anonymous_fun -> LPAREN . id_list RPAREN LBRACE statement_list RBRACE
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (39) expr -> . anonymous_fun
    (48) expr -> . LBRACKET arg_list RBRACKET
    (49) expr -> . LBRACE record_list RBRACE
    (50) expr -> . LPAREN statement_list RPAREN
    (54) expr -> . expr LBRACKET expr RBRACKET
    (55) expr -> . comp_op
    (56) expr -> . PLACEHOLDER
    (63) expr -> . log_op
    (1) statement_list -> . statement statement_list
    (2) statement_list -> . empty
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list
    (18) id_list -> . empty
    (44) alg_op -> . expr PLUS expr
    (45) alg_op -> . expr MINUS expr
    (46) alg_op -> . expr MULTIPLY expr
    (47) alg_op -> . expr DIVIDE expr
    (40) func_call -> . ID LPAREN arg_list RPAREN
    (76) anonymous_fun -> . LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (57) comp_op -> . expr EQUAL EQUAL expr
    (58) comp_op -> . expr BANG EQUAL expr
    (59) comp_op -> . expr GT expr
    (60) comp_op -> . expr GT EQUAL expr
    (61) comp_op -> . expr LT expr
    (62) comp_op -> . expr LT EQUAL expr
    (64) log_op -> . expr AND expr
    (65) log_op -> . expr OR expr
    (66) log_op -> . NOT expr
    (4) statement -> . IMPORT STRING SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . expr SEMICOLON
    (8) statement -> . macro_def
    (9) statement -> . macro_call
    (11) statement -> . loop
    (13) statement -> . fun_def
    (15) statement -> . RETURN expr SEMICOLON
    (3) empty -> .
    (10) assignment -> . l_value EQUAL r_value
    (19) conditional -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
    (67) macro_def -> . MAC macro_def_arg_list LBRACE statement_list RBRACE
    (72) macro_call -> . ATOM macro_arg_list SEMICOLON
    (12) loop -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (14) fun_def -> . FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (25) l_value -> . ID
    (26) l_value -> . ID fields
    (27) l_value -> . PLACEHOLDER
    (28) l_value -> . PLACEHOLDER fields

    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 57
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 25
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 27
    NOT             shift and go to state 33
    IMPORT          shift and go to state 4
    RETURN          shift and go to state 13
    RPAREN          reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    MAC             shift and go to state 29
    ATOM            shift and go to state 30
    WHILE           shift and go to state 31
    FUN             shift and go to state 32

    expr                           shift and go to state 54
    statement_list                 shift and go to state 55
    id_list                        shift and go to state 56
    alg_op                         shift and go to state 18
    func_call                      shift and go to state 22
    anonymous_fun                  shift and go to state 24
    comp_op                        shift and go to state 26
    log_op                         shift and go to state 28
    statement                      shift and go to state 2
    empty                          shift and go to state 58
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    macro_def                      shift and go to state 9
    macro_call                     shift and go to state 10
    loop                           shift and go to state 11
    fun_def                        shift and go to state 12
    l_value                        shift and go to state 14

state 17

    (49) expr -> LBRACE . record_list RBRACE
    (51) record_list -> . ID COLON expr
    (52) record_list -> . ID COLON expr COMMA record_list
    (53) record_list -> . empty
    (3) empty -> .

    ID              shift and go to state 60
    RBRACE          reduce using rule 3 (empty -> .)

    record_list                    shift and go to state 59
    empty                          shift and go to state 61

state 18

    (31) expr -> alg_op .

    SEMICOLON       reduce using rule 31 (expr -> alg_op .)
    LBRACKET        reduce using rule 31 (expr -> alg_op .)
    PLUS            reduce using rule 31 (expr -> alg_op .)
    MINUS           reduce using rule 31 (expr -> alg_op .)
    MULTIPLY        reduce using rule 31 (expr -> alg_op .)
    DIVIDE          reduce using rule 31 (expr -> alg_op .)
    EQUAL           reduce using rule 31 (expr -> alg_op .)
    BANG            reduce using rule 31 (expr -> alg_op .)
    GT              reduce using rule 31 (expr -> alg_op .)
    LT              reduce using rule 31 (expr -> alg_op .)
    AND             reduce using rule 31 (expr -> alg_op .)
    OR              reduce using rule 31 (expr -> alg_op .)
    RPAREN          reduce using rule 31 (expr -> alg_op .)
    COMMA           reduce using rule 31 (expr -> alg_op .)
    RBRACKET        reduce using rule 31 (expr -> alg_op .)
    ATOM            reduce using rule 31 (expr -> alg_op .)
    STRING          reduce using rule 31 (expr -> alg_op .)
    NUMBER          reduce using rule 31 (expr -> alg_op .)
    BOOL            reduce using rule 31 (expr -> alg_op .)
    NULL            reduce using rule 31 (expr -> alg_op .)
    ID              reduce using rule 31 (expr -> alg_op .)
    LPAREN          reduce using rule 31 (expr -> alg_op .)
    LBRACE          reduce using rule 31 (expr -> alg_op .)
    PLACEHOLDER     reduce using rule 31 (expr -> alg_op .)
    NOT             reduce using rule 31 (expr -> alg_op .)
    RBRACE          reduce using rule 31 (expr -> alg_op .)


state 19

    (33) expr -> NUMBER .
